# Vigil

./: .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Procfile  README.md  REVOLUTIONARY.md  TEST_GUIDE.md  advanced_signals.py  analyze_traps.py  api.py  data.py  database.py  docker-compose.yml  nixpacks.toml  requirements.txt  scheduler.py  test_e2e.py  vercel.json  vigil.db
backend/: .env.example  advanced_signals.py  api.py  data.py  database.py  models.py  pyproject.toml  requirements.txt  test_adversarial.py  vercel.json
backend/backtest/: __init__.py  broker.py  engine.py  metrics.py
backend/config/: __init__.py
backend/migrations/: 001_neon_optimizations.sql  002_decision_intelligence.sql  003_performance_indexes.sql  004_simulation_results.sql  005_weight_history.sql  README.md
backend/services/: __init__.py  alert_router.py  correlation_engine.py  dedup.py  di_router.py  distributed_lock.py  event_bus.py  explainability.py  feature_flags.py  health.py  lru_cache.py  observability.py  outcome_tracker.py  portfolio_risk.py  rate_limiter.py  regime_detector.py  regime_engine.py  scoring_engine.py  security.py  self_evaluation.py  ws_manager.py
backend/tests/: test_di_api.py  test_unit.py
backtest/: __init__.py  broker.py  engine.py  metrics.py
config/: events.py  regime_config.yaml
docs/: ARCHITECTURE.md  ARCHITECTURE_MIGRATION.md  CHANGELOG.md  DECISION_INTELLIGENCE_ARCHITECTURE.md  FORENSIC_AUDIT_V2.md  IMPLEMENTATION_PLAN.md  POLLING_MIGRATION_PLAN.md  PRODUCTION_AUDIT_REPORT.md  SPEC_NEXT_GEN.md  (+1 more)
(+52 files in other folders)
